# cpp_implementations

./: .gitignore  .gitmodules
Any/: CMakeLists.txt
Any/src/: any.h  main.cpp
Any/test/: unit_test.cpp
Function/Function_Ptr/: CMakeLists.txt
Function/Function_Ptr/src/: function.h
Function/Function_Ptr/test/: unit_test.cpp
Function/Function_Virtual/: function.h
Function/Function_Virtual/src/: main.cpp
Function/Function_Virtual/test/: unit_test.cpp
List/: .editorconfig  CMakeLists.txt  list.h
List/src/: list.h  main.cpp
LongArithmetic/: CMakeLists.txt  main.cpp
LongArithmetic/lib/: CMakeLists.txt
LongArithmetic/lib/include/long_arithmetic/: bigInteger.h  rational.h
LongArithmetic/lib/src/: bigInteger.cpp  rational.cpp
SharedPtr/: shared_ptr.h
Variant/: CMakeLists.txt  variant.h
Variant/src/: main.cpp  variant.h
Variant/test/: unit_test.cpp
